--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: openapi_generator_flutter
 description: OpenAPI仕様からDartのAPIクライアントとモデルを生成するツール
-version: 1.1.3
+version: 1.1.5
 publish_to: none
 
 environment:
@@ -28,3 +28,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+builders:
+  openapi_generator_flutter:
+    import: "package:openapi_generator_flutter/builder.dart"
+    builder_factories: ["openapiBuilder"]
+    build_extensions: {".dart": [".g.dart"]}
+    auto_apply: dependents
+    build_to: source
