--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: openapi_generator_flutter
 description: OpenAPI仕様からDartのAPIクライアントとモデルを生成するツール
-version: 1.1.5
+version: 1.1.6
 publish_to: none
 
 environment:
@@ -30,7 +30,7 @@ flutter:
   uses-material-design: true
 
 builders:
-  openapi_generator_flutter:
+  openapi_generator_flutter|openapi_generator_flutter:
     import: "package:openapi_generator_flutter/builder.dart"
     builder_factories: ["openapiBuilder"]
     build_extensions: {".dart": [".g.dart"]}
