--- a/build.yaml
+++ b/build.yaml
@@ -3,3 +3,10 @@ targets:
     builders:
       openapi_generator_flutter:
         enabled: true 
+builders:
+  openapi_generator_flutter:
+    import: "package:openapi_generator_flutter/openapi_generator_flutter"
+    builder_factories: ["openapiBuilder"]
+    build_extensions: {".dart": [".g.dart"]}
+    auto_apply: dependents
+    build_to: source
