--- a/build.yaml
+++ b/build.yaml
@@ -2,10 +2,10 @@ targets:
   openapi_generator_flutter:openapi_generator_flutter:
     builders:
       openapi_generator_flutter:
-        enabled: true 
+        enabled: true
 builders:
   openapi_generator_flutter:
-    import: "package:openapi_generator_flutter/openapi_generator_flutter"
+    import: "package:openapi_generator_flutter/builder.dart"
     builder_factories: ["openapiBuilder"]
     build_extensions: {".dart": [".g.dart"]}
     auto_apply: dependents
