--- a/lib/build.yaml
+++ b/lib/build.yaml
@@ -2,4 +2,10 @@ targets:
   $default:
     builders:
       openapi_generator_flutter:
-        enabled: true 
+        enabled: true
+        options:
+          run_generator: true
+          input_folder: "open_api_files"
+          output_folder: "lib/generated"
+          input_urls:
+            - url: "https://kabucom.github.io/kabusapi/reference/kabu_STATION_API.yaml" 
