--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,24 +1,29 @@
 name: openapi_generator_example
-description: OpenAPI Generator Flutterのサンプルプロジェクト
-version: 0.0.1
-publish_to: none
+description: Example project for openapi_generator_flutter
+publish_to: 'none'
+version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  openapi_generator_flutter:
-    path: ../
+  flutter:
+    sdk: flutter
+  openapi_generator_flutter: ^1.2.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
-  retrofit: ^4.4.2
+  retrofit: ^4.1.0
   dio: ^5.4.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  analyzer: ^5.13.0
-  build_runner: ^2.4.7
+  flutter_test:
+    sdk: flutter
+  build_runner: ^2.4.8
   freezed: ^2.4.6
   json_serializable: ^6.7.1
-  lints: ^5.0.0
-  retrofit_generator: ^7.0.8
-  test: ^1.24.9 
+  retrofit_generator: ^8.1.0
+  flutter_lints: ^2.0.0
+
+flutter:
+  uses-material-design: true 
