Ver0.3.1 enum enabled

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  openapi_generator_flutter: ^0.2.0
+  openapi_generator_flutter:
+    path: ../
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   retrofit: ^4.1.0
