--- a/example/build.yaml
+++ b/example/build.yaml
@@ -1,5 +1,5 @@
 targets:
-  openapi_generator_flutter:openapi_generator_flutter:
+  $default:
     builders:
       openapi_generator_flutter:
         enabled: true
