--- a/example/build.yaml
+++ b/example/build.yaml
@@ -7,9 +7,10 @@ targets:
           run_generator: true
           input_folder: "open_api_files"
           output_folder: "lib/generated"
-          input_urls:
-            - "open_api_files/kabu_station_api.yaml"
-            - "open_api_files/petstore.yaml"
+          # input_urlsはオプショナル
+          # 指定がない場合はinput_folderのファイルを使用
+          # input_urls:
+          #   - "open_api_files/kabu_station_api.yaml"
 builders:
   openapi_generator_flutter:
     import: "package:openapi_generator_flutter/builder.dart"
