--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,40 +1,38 @@
 name: openapi_generator_flutter
-description: OpenAPI仕様からDartのAPIクライアントとモデルを生成するツール
-version: 0.3.3
-publish_to: none
+description: OpenAPI (Swagger) client generator for Flutter applications
+version: 0.3.4
+repository: https://github.com/taskcrypto/openapi_generator_flutter
+homepage: https://github.com/taskcrypto/openapi_generator_flutter
+issue_tracker: https://github.com/taskcrypto/openapi_generator_flutter/issues
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
+  flutter: #Default
+    sdk: flutter
+
   build: ^2.4.1
-  build_config: ^1.1.1
-  build_resolvers: ^2.4.1
-  code_builder: ^4.8.0
-  collection: ^1.18.0
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  path: ^1.8.3
-  retrofit: ^4.4.2
+  source_gen: ^1.5.0
+  analyzer: ^6.2.0
+  code_builder: ^4.9.0
   yaml: ^3.1.2
+  json_annotation: ^4.9.0
+  dio: ^5.4.1
+  path: ^1.8.3
+  args: ^2.4.2
+  freezed_annotation: ^2.4.1
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
 
 dev_dependencies:
-  analyzer: ^5.13.0
-  build_runner: ^2.4.7
-  dart_style: ^2.3.2
-  freezed: ^2.4.6
-  json_serializable: ^6.7.1
-  lints: ^5.0.0
-  retrofit_generator: ^7.0.8
-  test: ^1.24.9
+  lints: ^2.1.1
+  test: ^1.24.0
 
 flutter:
   uses-material-design: true
 
-builders:
-  openapi_generator_flutter:
-    import: "package:openapi_generator_flutter/builder.dart"
-    builder_factories: ["openapiBuilder"]
-    build_extensions: {".dart": [".g.dart"]}
-    auto_apply: dependents
-    build_to: source
+executables:
+  generate: generate
