--- a/example/build.yaml
+++ b/example/build.yaml
@@ -1,5 +1,9 @@
 targets:
   $default:
+    sources:
+      - $package$
+      - lib/**
+      - open_api_files/**
     builders:
       openapi_generator_flutter:
         enabled: true
@@ -11,10 +15,3 @@ targets:
           # 指定がない場合はinput_folderのファイルを使用
           # input_urls:
           #   - "open_api_files/kabu_station_api.yaml"
-builders:
-  openapi_generator_flutter:
-    import: "package:openapi_generator_flutter/builder.dart"
-    builder_factories: ["openapiBuilder"]
-    build_extensions: {".dart": [".g.dart"]}
-    auto_apply: dependents
-    build_to: source 
