--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,20 +11,21 @@ dependencies:
     sdk: flutter
   openapi_generator_flutter:
     path: ../
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
   retrofit: ^4.1.0
-  dio: ^5.4.0
-  cupertino_icons: ^1.0.2
+  dio: ^5.8.0
+  cupertino_icons: ^1.0.8
+  dart_style: ^3.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  build_runner: ^2.4.8
-  freezed: ^2.4.6
-  json_serializable: ^6.7.1
-  retrofit_generator: ^8.1.0
-  flutter_lints: ^2.0.0
+  # flutter_test:  # 一時的にコメントアウト
+  #   sdk: flutter
+  build_runner: ^2.4.15
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
+  retrofit_generator: ^9.1.9
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true 
