--- a/example/build.yaml
+++ b/example/build.yaml
@@ -13,5 +13,6 @@ targets:
           output_folder: "lib/generated"
           # input_urlsはオプショナル
           # 指定がない場合はinput_folderのファイルを使用
-          # input_urls:
-          #   - "open_api_files/kabu_station_api.yaml"
+          input_urls:
+            - "https://kabucom.github.io/kabusapi/reference/kabu_STATION_API.yaml"
+
