--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: openapi_generator_flutter
 description: OpenAPI (Swagger) client generator for Flutter applications
-version: 0.3.6
+version: 0.3.7
 repository: https://github.com/taskcrypto/openapi_generator_flutter
 homepage: https://github.com/taskcrypto/openapi_generator_flutter
 issue_tracker: https://github.com/taskcrypto/openapi_generator_flutter/issues
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
 
   build: ^2.4.1
+  build_config: ^1.1.1
   source_gen: ^2.0.0
   analyzer: ^7.3.0
   code_builder: ^4.9.0
@@ -22,10 +23,10 @@ dependencies:
   dio: ^5.4.1
   path: ^1.8.3
   args: ^2.4.2
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.1.0
   json_serializable: ^6.9.4
-  build_runner: ^2.4.15
-  freezed: ^2.5.8
+  build_runner: ^2.5.4
+  freezed: ^3.1.0
   retrofit: ^4.1.0
   retrofit_generator: ^9.1.9
 
@@ -36,6 +37,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
 executables:
   generate: generate
+
