--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,25 +5,26 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.24.4"
 
 dependencies:
   flutter:
     sdk: flutter
   openapi_generator_flutter:
     path: ../
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   retrofit: ^4.1.0
-  dio: ^5.8.0
+  dio: ^5.4.1
   cupertino_icons: ^1.0.8
   dart_style: ^3.0.0
 
 dev_dependencies:
   # flutter_test:  # 一時的にコメントアウト
   #   sdk: flutter
-  build_runner: ^2.4.15
-  freezed: ^2.5.8
-  json_serializable: ^6.9.4
+  build_runner: ^2.5.4
+  freezed: ^3.1.0
+  json_serializable: ^6.9.5
   retrofit_generator: ^9.1.9
   flutter_lints: ^5.0.0
 
